feat:完成安卓客户端迁移

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>MiraMate</title>
   </head>
-  <body>
+  <body class="min-h-screen bg-gradient-to-br from-mira-bg-start to-mira-bg-end">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
